--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -5,8 +5,8 @@ backend:
 # Uncomment below to enable drafts
 # publish_mode: editorial_workflow
 
-media_folder: "src/assets/img" # Media files will be stored in the repo under images/uploads
-public_folder: "assets/img/uploads" 
+media_folder: "src/assets/img/uploads" # Media files will be stored in the repo under images/uploads
+public_folder: "assets/img" 
 collections:
   #Global Settings
   - name: "global-settings"
