test media files

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 # Uncomment below to enable drafts
 # publish_mode: editorial_workflow
 
-media_folder: "src/assets/img/uploads" # Media files will be stored in the repo under images/uploads
+media_folder: "src/assets/img/feature-imgs" # Media files will be stored in the repo under images/uploads
 public_folder: "assets/img" 
 collections:
   #Global Settings
@@ -48,19 +48,20 @@ collections:
     folder: "src/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    media_folder: '' # media files being saved in the same directory as the entry, and the image field being populated with the relative path to the image.
+    public_folder: ''
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: OGImage, name: image, widget: image, choose_url: true, required: false }
       - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Summary", name: "summary", widget: "text" }
       - {
           label: "Meta Description",
           name: "metaDescription",
           widget: "text",
           required: false,
         }
-      - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
+      - { label: "Tags", name: "tags", widget: "list", default: [""] }
 
   # Projects
   - name: "project"
