--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -177,17 +177,12 @@ collections:
         fields:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown", required: false }
-          - {
-              label: "Meta Description",
-              name: "metaDescription",
-              widget: "text",
-              required: false,
-            }
+          # - {
+          #     label: "Meta Description",
+          #     name: "metaDescription",
+          #     widget: "text",
+          #     required: false,
+          #   }
           - { label: "Publish Date", name: "date", widget: "datetime" }
-          - { label: "Permalink", name: "permalink", widget: "string" }
-          - label: "Navigation" # https://www.11ty.dev/docs/plugins/navigation/
-            name: "eleventyNavigation"
-            widget: "object"
-            fields:
-              - { label: "Key", name: "key", widget: "string" }
-              - { label: "Order", name: "order", widget: "number", default: 0 }
+          # - { label: "Permalink", name: "permalink", widget: "string" }
+
